Revert "fix: override Gutenberg column vertical alignment center bug"
This reverts commit 17730e129badcf7764058f2c8a0af3d61fda130b.

--- a/wp-content/themes/extendable/style.css
+++ b/wp-content/themes/extendable/style.css
@@ -554,14 +554,3 @@ input, textarea {
     pointer-events: none;
     z-index: 1;
 }
-
-/* Fix Gutenberg columns vertical alignment override bug */
-.wp-block-columns.are-vertically-aligned-center {
-	align-items: center !important;
-}
-.wp-block-columns.are-vertically-aligned-top {
-	align-items: flex-start !important;
-}
-.wp-block-columns.are-vertically-aligned-bottom {
-	align-items: flex-end !important;
-}
